# gaggico

./: .clangd  .gitignore  CMakeLists.txt  wireshark_dissector.lua
src/: config.hpp  control.cpp  hardware.cpp  inttypes.hpp  lwipopts.h  main.cpp  messages.cpp  network.cpp  pac.pio  panic.cpp  panic.hpp  protocol.cpp  settings.cpp  settings.hpp
src/control/: control.cpp  control.hpp  protocol.cpp  protocol.hpp  pump.hpp  states.cpp  states.hpp
src/control/impl/: coroutine.hpp  kalman_filter.hpp  pid.hpp  state_machine.hpp
src/hardware/: hardware.cpp  hardware.hpp  hx711.pio  psm.hpp  sd_card.cpp  sd_card.hpp  thermal_runaway.hpp
src/include/: inttypes.hpp  linkedlist.hpp  messages.hpp  moving_average.hpp  network.hpp  panic.hpp  protocol.hpp  serde.hpp  settings.hpp
src/network/: discovery.cpp  discovery.hpp  lwipopts.h  messages.cpp  messages.hpp  network.cpp  network.hpp  ntp.cpp  ntp.hpp  serde.hpp
src/network/impl/: message.hpp  queue.hpp  serde.hpp
